force-app/main/default/objects/AttendanceDetails__c/AttendanceDetails__c.object-meta.xml
<CustomObject>
    <label>AttendanceDetail</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Attendance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AttendanceDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>