force-app/main/default/objects/AttendanceDetails__c/fields/Day_10__c.field-meta.xml
<CustomField>
    <fullName>Day_10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Day 10</label>
    <type>Checkbox</type>
</CustomField>