force-app/main/default/objects/AttendanceDetails__c/fields/Day_11__c.field-meta.xml
<CustomField>
    <fullName>Day_11__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Day 11</label>
    <type>Checkbox</type>
</CustomField>