force-app/main/default/objects/AttendanceDetails__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>AttendanceDetails</relationshipLabel>
    <relationshipName>AttendanceDetails</relationshipName>
    <type>Lookup</type>
</CustomField>